Fixup header padding.
It was too much, before. Now it looks better.

--- a/assets/style.css
+++ b/assets/style.css
@@ -29,7 +29,7 @@ p {
 
 h1 {
   position: relative;
-  padding: 2em;
+  padding: 1.5em 0 1em;
   text-align: center;
   font-style: italic;
 }
